Naming updated to prevent overlaps.

--- a/frontend/infosafe_frontend/src/styling/ViewAccessRequest.css
+++ b/frontend/infosafe_frontend/src/styling/ViewAccessRequest.css
@@ -7,7 +7,7 @@
     backdrop-filter: blur(20px);
     margin: 0 auto;
 }
-.accessRequestPopupBorder {
+.viewAccessRequestPopupBorder {
     border: 1px solid #ffffff;
     width: 46vw;
     margin: 0 auto;
